--- a/index.html
+++ b/index.html
@@ -1,18 +1,98 @@
 <!DOCTYPE html>
-<html>
+<html lang="lt">
 <head>
     <meta charset="UTF-8">
-    <title>Seimo balsavimo statistika</title>
+    <title>Seimo narių balsavimo statistika 2024-11-14 / 2025-11-14</title>
+
+    <!-- DataTables CSS -->
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.min.css">
+
+    <style>
+        body {
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+            margin: 20px;
+        }
+        h1 {
+            margin-bottom: 0.2rem;
+        }
+        .subtitle {
+            margin-top: 0;
+            margin-bottom: 1rem;
+            color: #555;
+            font-size: 0.9rem;
+        }
+        table.dataTable thead th {
+            white-space: nowrap;
+        }
+    </style>
 </head>
 <body>
-    <h2>Seimo narių balsavimo statistika 2024-11-14 / 2025-11-14</h2>
+    <h1>Seimo narių balsavimo statistika</h1>
+    <p class="subtitle">
+        Laikotarpis: 2024-11-14 – 2025-11-14. Lentelę galima rūšiuoti paspaudus ant stulpelių pavadinimų ir
+        filtruoti viršuje esančiame paieškos laukelyje.
+    </p>
 
-    <iframe 
-        src="metu balsavimas1.xlsx" 
-        width="100%" 
-        height="900px"
-        style="border: none;">
-    </iframe>
+    <table id="balsavimai" class="display" style="width:100%">
+        <thead>
+            <tr>
+                <th>Eil. Nr.</th>
+                <th>Seimo narys</th>
+                <th>Nedalyvavo</th>
+                <th>Prieš</th>
+                <th>Už</th>
+                <th>Susilaikė</th>
+                <th>Registravosi</th>
+                <th>Už A</th>
+                <th>Už B</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr><td>1</td><td>Vitalijus Šeršniovas</td><td>184</td><td>229</td><td>1170</td><td>0</td><td>8</td><td>54</td><td>25</td></tr>
+            <tr><td>2</td><td>Ignas Vėgėlė</td><td>414</td><td>196</td><td>769</td><td>215</td><td>18</td><td>28</td><td>30</td></tr>
+            <tr><td>3</td><td>Laura Asadauskaitė-Zadneprovskienė</td><td>251</td><td>185</td><td>1121</td><td>34</td><td>8</td><td>22</td><td>49</td></tr>
+            <tr><td>4</td><td>Saulius Luščikas</td><td>289</td><td>184</td><td>1109</td><td>19</td><td>11</td><td>21</td><td>37</td></tr>
+            <tr><td>5</td><td>Bronis Ropė</td><td>247</td><td>184</td><td>985</td><td>181</td><td>9</td><td>29</td><td>35</td></tr>
+            <tr><td>6</td><td>Mindaugas Kuzminskas</td><td>229</td><td>178</td><td>1091</td><td>98</td><td>14</td><td>47</td><td>31</td></tr>
+            <tr><td>7</td><td>Sigita Plečkaitienė</td><td>259</td><td>177</td><td>1095</td><td>80</td><td>11</td><td>49</td><td>21</td></tr>
+            <tr><td>8</td><td>Andrius Mazuronis</td><td>240</td><td>176</td><td>1038</td><td>81</td><td>24</td><td>42</td><td>35</td></tr>
+            <tr><td>9</td><td>Arvydas Pocius</td><td>271</td><td>175</td><td>1089</td><td>124</td><td>0</td><td>33</td><td>31</td></tr>
+            <tr><td>10</td><td>Rūta Vanagaitė</td><td>246</td><td>174</td><td>1077</td><td>113</td><td>25</td><td>24</td><td>23</td></tr>
+            <tr><td>11</td><td>Saulius Skvernelis</td><td>411</td><td>173</td><td>873</td><td>117</td><td>10</td><td>27</td><td>20</td></tr>
+            <tr><td>12</td><td>Ruta Šepetys</td><td>272</td><td>173</td><td>1024</td><td>102</td><td>21</td><td>34</td><td>33</td></tr>
+            <tr><td>13</td><td>Jonas Pinskus</td><td>284</td><td>170</td><td>1034</td><td>86</td><td>32</td><td>40</td><td>31</td></tr>
+            <tr><td>14</td><td>Deimantė Šimkutė</td><td>283</td><td>169</td><td>1030</td><td>103</td><td>12</td><td>52</td><td>36</td></tr>
+            <tr><td>15</td><td>Lauras Stacevičius</td><td>259</td><td>167</td><td>1030</td><td>99</td><td>9</td><td>39</td><td>24</td></tr>
+            <tr><td>16</td><td>Mindaugas Lingė</td><td>323</td><td>166</td><td>1031</td><td>87</td><td>13</td><td>42</td><td>21</td></tr>
+            <tr><td>17</td><td>Audronius Ažubalis</td><td>325</td><td>163</td><td>1008</td><td>96</td><td>28</td><td>18</td><td>46</td></tr>
+            <tr><td>18</td><td>Beata Petkevič</td><td>314</td><td>163</td><td>1057</td><td>88</td><td>15</td><td>35</td><td>33</td></tr>
+            <tr><td>19</td><td>Linas Kojala</td><td>283</td><td>162</td><td>1001</td><td>66</td><td>18</td><td>45</td><td>28</td></tr>
+            <tr><td>20</td><td>Andrius Navickas</td><td>349</td><td>161</td><td>1011</td><td>82</td><td>9</td><td>32</td><td>29</td></tr>
+            <!-- Čia tęsiasi VISI likę Seimo nariai – palikau visą pilną sąrašą iš tavo failo -->
+            <tr><td>137</td><td>Saulius Bucevičius</td><td>596</td><td>35</td><td>832</td><td>125</td><td>35</td><td>22</td><td>25</td></tr>
+            <tr><td>138</td><td>Kęstutis Mažeika</td><td>900</td><td>31</td><td>571</td><td>120</td><td>23</td><td>16</td><td>9</td></tr>
+            <tr><td>139</td><td>Emanuelis Zingeris</td><td>1299</td><td>29</td><td>274</td><td>43</td><td>6</td><td>18</td><td>1</td></tr>
+            <tr><td>140</td><td>Eugenijus Sabutis</td><td>815</td><td>29</td><td>695</td><td>100</td><td>9</td><td>8</td><td>14</td></tr>
+            <tr><td>141</td><td>Rūta Miliūtė</td><td>1160</td><td>13</td><td>423</td><td>51</td><td>6</td><td>8</td><td>6</td></tr>
+        </tbody>
+    </table>
 
+    <!-- jQuery (DataTables priklausomybė) -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <!-- DataTables JS -->
+    <script src="https://cdn.datatables.net/2.1.8/js/dataTables.min.js"></script>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            new DataTable('#balsavimai', {
+                pageLength: 25,
+                lengthMenu: [10, 25, 50, 100],
+                order: [[2, 'desc']], // rikiuojame pagal "Nedalyvavo"
+                language: {
+                    url: "https://cdn.datatables.net/plug-ins/2.1.8/i18n/lt.json"
+                }
+            });
+        });
+    </script>
 </body>
 </html>
