--- a/index.html
+++ b/index.html
@@ -70,53 +70,13 @@ document.addEventListener("DOMContentLoaded", function() {
                 var r = rows[i];
                 if (!r || r.length < 9) continue;
 
-                // ČIA SĄMONINGAI NENAUDOJAME EIL. NR. IŠ FAILO (r[0])
+                // Į DATA įdedame ir originalų eilės nr., bet tik kaip žalią duomenį (vėliau jo nerodysim)
                 data.push([
-                    r[1], // 0: Seimo narys
-                    parseInt(r[2] || "0", 10), // 1: Nedalyvavo
-                    parseInt(r[3] || "0", 10), // 2: Prieš
-                    parseInt(r[4] || "0", 10), // 3: Už
-                    parseInt(r[5] || "0", 10), // 4: Susilaikė
-                    parseInt(r[6] || "0", 10), // 5: Registravosi
-                    parseInt(r[7] || "0", 10), // 6: Už A
-                    parseInt(r[8] || "0", 10)  // 7: Už B
-                ]);
-            }
-
-            new DataTable("#balsavimai", {
-                data: data,
-                columns: [
-                    {   // Eil. Nr. – dinamiškai skaičiuojamas pagal EILUTĖS POZICIJĄ
-                        data: null,
-                        searchable: false,
-                        orderable: false,
-                        render: function (data, type, row, meta) {
-                            // numeruoja tai, kas RODOMA ekrane, nuo 1 iki N
-                            return meta.row + 1;
-                        }
-                    },
-                    { data: 0 }, // Seimo narys
-                    { data: 1 }, // Nedalyvavo
-                    { data: 2 }, // Prieš
-                    { data: 3 }, // Už
-                    { data: 4 }, // Susilaikė
-                    { data: 5 }, // Registravosi
-                    { data: 6 }, // Už A
-                    { data: 7 }  // Už B
-                ],
-                // PRADINIS VAIZDAS – abėcėle pagal Seimo nario vardą/pavardę
-                order: [[1, "asc"]],
-                pageLength: 25,
-                lengthMenu: [[10, 25, 50, 141, -1], [10, 25, 50, 141, "Visi"]],
-                language: {
-                    url: "https://cdn.datatables.net/plug-ins/2.1.8/i18n/lt.json"
-                }
-            });
-        }
-    });
-
-});
-</script>
-
-</body>
-</html>
+                    parseInt(r[0] || "0", 10), // 0: originalus Eil. Nr. (tik jei kada prireiks)
+                    r[1],                      // 1: Seimo narys
+                    parseInt(r[2] || "0", 10), // 2: Nedalyvavo
+                    parseInt(r[3] || "0", 10), // 3: Prieš
+                    parseInt(r[4] || "0", 10), // 4: Už
+                    parseInt(r[5] || "0", 10), // 5: Susilaikė
+                    parseInt(r[6] || "0", 10), // 6: Registravosi
+                    parseInt(r[7] || "0", 10), // 7: Už A
